[project]
name = "transaction-queue-proxy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.12.0",
    "asyncpg>=0.30.0",
    "fastapi[all]>=0.121.2",
    "flask>=3.1.2",
    "httpx>=0.28.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "python-json-logger>=4.0.0",
    "redis>=7.1.0",
    "ruff>=0.14.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"


[tool.bandit]
exclude = ["tests"]


[tool.ruff]
line-length = 100
exclude = [
    "tests",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true


[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
